--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-numpy
-pandas
-matplotlib
-openpyxl
-ipywidgets
+numpy==2.4.2
+pandas==3.0.0
+matplotlib==3.10.8
+openpyxl==3.1.5
+ipywidgets==8.1.8
